--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,8 @@ body {
 
 .todo-item {
   display: flex;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
+  justify-content: space-between;
   align-items: center;
   padding: 30px 20px 0;
   width: 70%;
@@ -58,4 +59,24 @@ input[type=checkbox] {
 
 input[type=checkbox]:focus {
   outline: 0;
+}
+
+.btn{
+  margin-left: 145px;
+  border-radius: 5px;
+  display: inline-block;
+  font-weight: 400;
+  white-space: nowrap;
+  text-align: center;
+  background-image: none;
+  -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, .015);
+  height: 32px;
+  padding: 0 15px;
+  font-size: 14px;
+  border-radius: 4px;
+  color: rgba(0, 0, 0, .65);
+  background-color: #fff;
+  border: 1px solid #d9d9d9;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, .015);
+  cursor: pointer;
 }
