--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ input[type=checkbox]:focus {
   outline: 0;
 }
 
-.btn{
+.btn {
   margin-left: 145px;
   border-radius: 5px;
   display: inline-block;
@@ -72,11 +72,69 @@ input[type=checkbox]:focus {
   -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, .015);
   height: 32px;
   padding: 0 15px;
-  font-size: 14px;
   border-radius: 4px;
   color: rgba(0, 0, 0, .65);
   background-color: #fff;
-  border: 1px solid #d9d9d9;
+  border: 1px solid #7f8ff4;
   box-shadow: 0 2px 0 rgba(0, 0, 0, .015);
   cursor: pointer;
+  font-size: 14px;
+}
+
+form {
+  padding: 30px;
+  /* width: 360px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+input[type=text] {
+  box-shadow: 0px 6px 50px 0 rgba(0, 0, 0, .12);
+  border-width: 0 0 1px 0;
+  margin: 15px 10px 15px 15px;
+  border-radius: 5px;
+  background-color: #fff;
+  text-shadow: none;
+  color: #a3a3a3;
+  letter-spacing: 2px;
+  outline: none;
+  width: 360px;
+  padding: 20px 18px;
+}
+
+input[type=text]::-webkit-input-placeholder {
+  color: #C7BCF8;
+  letter-spacing: 2px;
+}
+
+input[type=submit] {
+  padding: 16px 36px;
+  outline: none;
+  transition: background-color 0.2s ease,
+    color 0.2s ease;
+  margin-left: -96px;
+  display: inline-block;
+  border-radius: 2px;
+  display: inline-block;
+  background: transparent;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1);
+  font-size: .6em;
+  background-color: #7f8ff4;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  letter-spacing: 2px;
+  font-weight: bold;
+  text-shadow: none;
+  cursor: pointer;
+  margin-left: -96px;
+  text-transform:uppercase;
+}
+
+button,
+input[type=submit] {
+  outline: none;
+  transition: background-color 0.2s ease,
+    color 0.2s ease;
 }
