--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,11 @@ body {
   width: 100%;
 }
 
-.header label{
+.header label {
   font-size: .85em;
 }
 
-.header h3{
+.header h3 {
   font-size: 1.5em;
 }
 
@@ -158,4 +158,13 @@ input[type=submit] {
   outline: none;
   transition: background-color 0.2s ease,
     color 0.2s ease;
+}
+
+.pending {
+  list-style: none;
+  color: #d2d2d2;
+}
+
+.fade {
+  color: #d2d2d2 !important;
 }
